deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syspo-jean-jira
  namespace: calamar-2li-qualif-02
  labels:
    app: syspo-jean-jira
    env: qual
    project: syspo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: syspo-jean-jira
      env: qual
      project: syspo
  template:
    metadata:
      labels:
        app: syspo-jean-jira
        env: qual
        project: syspo
    spec:
      containers:
        - name: syspo-jean-jira
          image: deuxli-docker-releases.artifactory-zci.enedis.fr/syspo-jean-jira:0.1.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 64Mi
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
      imagePullSecrets:
        - name: syspo-artifactory-releases-reader
        - name: syspo-artifactory-stages-reader
