deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: syspo-jean-jira
  namespace: calamar-2li-qualif-02
  labels:
    app: syspo-jean-jira
    env: qual
    project: syspo
spec:
  selector:
    app: syspo-jean-jira
    env: qual
    project: syspo
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
